Update to Spring Boot 3.2